samples/_failures_safe/1761261797_815454_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c1b18c8.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_9c1b18c8.c:165: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_9c1b18c8.c:164:13: error: expected declaration or statement at end of input
  164 |             if
      |             ^~
./samples/SAFE/__tmp_9c1b18c8.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9c1b18c8.c:164:13: error: expected declaration or statement at end of input
